--- a/index.html
+++ b/index.html
@@ -1,54 +1,38 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<link rel="stylesheet" href="stylesheet.css" type="text/css">
-		<title>Sebastians Page</title>
-	</head>
-	<body>
-		<div class="top">
-			<header>
-				<h2>Sebastians Webpage</h2>
-			</header>
-			<div class="navigationDesktop">
-				<nav>
-					<ul>
-						<li><a href="#">Social Media</a>
-							<ul>
-								<li><a href="https://www.facebook.com/sebastian.racki">Facebook</a></li>
-								<li><a href="https://www.instagram.com/r_sebastian17/">Instagram</a></li>
-								<li><a href="https://twitter.com/r_sebastian18">Twitter</a></li>
-								<li><a href="https://github.com/RackiSebastian">Github</a>
-								</li>
-							</ul>
-						</li>
-
-						<li><a href="#">my Life</a>
-							<ul>
-								<li><a href="#">School</a></li>
-								<li><a href="#">Work</a></li>
-								<li><a href="#">Achievements</a></li>
-							</ul>
-						</li>
-
-						<li><a href="#">Projects</a>
-							<ul>
-								<li><a href="#">All school work</a></li>
-
-							</ul>
-						</li>
-
-						<li><a href="about.html">About</a></li>
-					</ul>
-				</nav>
-			</div>
-
-			<article>
-				<p class = "blink">Ill add some shtuff into here at a later stage</p>
-			</article>
-
-			<footer>
-				Sebastian Racki &copy; 2018
-			</footer>
-		</div>
-	</body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <title>wd1 Website</title>
+        <link rel="stylesheet" href="../wd1/stylesheet.css" />
+    </head>
+    <body>
+    <header>
+        <em>Sebastians Webpage</em>
+    </header>
+    <nav>
+        <ul>
+            <li><a href= "https://cs1.ucc.ie/~swr1/wd1/index.html">Home</a></li>
+            <li><a href = "#">Hobbies</a></li>
+            <li><a href = "#">Social Media</a></li>
+            <li><a href = "#">Education</a></li>
+        </ul>
+    </nav>
+    <section>
+        <article class = "first">
+            <h2>Introduction</h2>
+            <p>My name is Sebastian.I am 18 years old, I am orginially from Poland and moved to <em>Ireland</em> at the age of 3. I have grown to love the country for its culture but also the people (sometimes even "The Sesh") Here is a pic of me (rarely ever see me in labs). I study computer science and attended Carrigaline Community School before that. </p> 
+        </article>
+        <article class = "second">
+            <p>
+            Here are a few pics of me!!! 
+            </p>
+            <figure>
+            <img src = "seb.jpg" alt= "One sexy bitch" title= "Wombat" width= 900px >
+            </figure>
+        </article>
+    </section>
+    </body>
+    <footer>
+    <small>All rights reserved Sebastian</small>
+    </footer>
 </html>
